fix contrast issue

--- a/style.css
+++ b/style.css
@@ -54,23 +54,27 @@ ol {
 }
 
 /*core root defaults*/
+
 html:focus-within {
   scroll-behavior: smooth;
 }
 
 /*body defaults*/
+
 body {
   min-height: 100vh;
   line-height: 2;
-  /* text-rendering: optimizeLegibility; */
 }
+
 /*img property*/
+
 img {
   max-width: 75%;
   display: block;
 }
 
 /*fonts for input and button*/
+
 input,
 button,
 textarea {
@@ -78,6 +82,7 @@ textarea {
 }
 
 /*Remove all animations, transitions*/
+
 @media (prefers-reduced-motion: reduce) {
   *,
   *::before,
@@ -92,14 +97,6 @@ textarea {
   }
 }
 
-/* * {
-  margin-top: 0.5rem;
-} */
-
-/* a{
-    color:#919fac
-} */
-
 body {
   font-size: 1.4rem;
   background-color: #2c3e50;
@@ -108,10 +105,43 @@ body {
 }
 
 body a {
-  color: #919fac;
+  color:#8dc6d9;
   -webkit-transition: opacity 400ms linear;
   transition: opacity 350ms linear;
 }
+
+a {
+  background-image: linear-gradient(
+    to right,
+    #54b3d6,
+    #54b3d6 50%
+  );
+  background-size: 200% 100%;
+  background-position: -100%;
+  display: inline-block;
+  padding: 5px 0;
+  position: relative;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  transition: all 0.3s ease-in-out;
+}
+
+a:before{
+  content: '';
+  background: #54b3d6;
+  display: block;
+  position: absolute;
+  bottom: -3px;
+  left: 0;
+  width: 0;
+  height: 3px;
+  transition: all 0.3s ease-in-out;
+}
+
+a:hover::before{
+  width: 100%;
+}
+
 
 .container a{
   border: 1px solid transparent;
@@ -122,21 +152,17 @@ body a {
 .container a:hover, 
 .container a:focus{
   animation: changeBorder 1s ease infinite;
+
 }
 
 .container a{
   outline: none;
 }
 
-/* .container > h2{
-margin: 1rem 0;
-} */
-
-
 body a:hover,
 body a:focus {
   opacity: 1;
-  color: #8dc6d9;
+  color:#5ba5c2;
 }
 
 h1,
@@ -146,6 +172,7 @@ h4 {
   font-family: var(--font-title);
   line-height: 1.5;
 }
+
 
 .container,
 nav {
@@ -177,8 +204,6 @@ nav {
 
 header {
   min-height: auto;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
   width:100%;
   height:75vh;
@@ -230,11 +255,10 @@ header p{
 header p a:nth-child(1) {
   -webkit-transition: opacity 200ms linear;
   transition: opacity 200ms linear;
-  color:#919fac;
 }
 
 header p a:hover {
-  color: #8dc6d9;
+  color:#5ba5c2;
   opacity: 1;
 }
 
@@ -248,13 +272,11 @@ header p a:hover {
   margin-bottom: auto;
   background: linear-gradient(45deg, #8dc6d9, #004e92);
   background-size: 100%;
-  /* background-position: center; */
   border-radius: 0.6rem;
   text-decoration: none;
   font-weight: bolder;
   text-transform: uppercase;
   color: white;
-  /* padding: 1rem 1rem; */
   -webkit-box-shadow: rgba(0, 0.5, 0.5, 0.5) 0px 5px 15px;
   box-shadow: rgba(0, 0, 0, 0.5) 0px 5px 15px;
 }
@@ -266,6 +288,7 @@ header p a:hover {
   transform: scale(0.8);
   color: #3c2f3a;
 }
+
 
 .link-github svg {
   width: 1em;
@@ -321,15 +344,18 @@ nav ul li a {
   font-weight: bolder;
   color: #8dc6d9;
   margin: 0;
-
-  /* width:100%; */
+  padding: 0px 10px;
 }
 
 nav ul li a:focus,
 nav ul li a:hover {
   opacity: 1;
-  color: #919fac;
-  -webkit-transform: scale(0.9);
+  -webkit-transform: scale(0.8);
+  
+}
+
+nav ul li a:before{
+ content: none;
 }
 
 main {
@@ -339,8 +365,6 @@ main {
 /*section part*/
 
 section {
-  display: -webkit-box;
-  display: -ms-flexbox;
   -webkit-box-orient: vertical;
   -webkit-box-direction: initial;
   -ms-flex-direction: row;
@@ -363,7 +387,6 @@ section .link-guidelines {
   margin-bottom: 2em;
   background: linear-gradient(45deg, #004e92, #8dc6d9);
   background-size: 100%;
-  /* background-position: center; */
   border-radius: 0.6rem;
   text-decoration: none;
   font-weight: bolder;
@@ -400,12 +423,8 @@ section h2 {
   text-align: left;
 }
 
-/* section ul{
-    padding:0;
-} */
-
 section ul li {
-  outline: #2f8db3 2.5px solid;
+  outline:#555 2.0px solid;
   display: flex;
   justify-content: flex-start;
   align-items: flex-start;
@@ -415,21 +434,19 @@ section ul li {
   padding: 0.5rem 1.5rem;
   background: linear-gradient(45deg, #5ba5c2, #004e92);
   background-size: 100%;
-  /* background-position: center; */
   border-radius: 0.6em;
   text-decoration: none;
   font-weight: bolder;
   text-transform: uppercase;
-  /* margin:auto; */
   margin: 1rem 0;
   font-size: clamp(.8rem, 5vw, 1.2rem);
 }
 
 section ul li:hover,
 section ul li:focus {
-  opacity: 0.6;
-  box-shadow: rgba(0, 0.5, 0.5, 0.5) 0px 40px 15px;
-  color: #8dc6d9;
+  opacity: .9;
+  box-shadow: rgba(0, 0.5, 0.5, 0.5) 0px 25px 25px;
+  color: white;
 }
 
 #guidelines .container{
@@ -488,7 +505,6 @@ main footer h3 {
   border-bottom: #8dc6d9 0.1em solid;
   text-transform: uppercase;
   margin: 0.9em;
-  /* width: -webkit-max-content; */
 }
 
 main footer a {
@@ -509,13 +525,12 @@ main footer a {
   margin: 1rem;
   -webkit-box-shadow: rgba(0, 0.5, 0.5, 0.5) 0px 5px 15px;
   box-shadow: rgba(0, 0.5, 0.5, 0.5) 0px 5px 15px;
-  /* margin-right: 2.5em; */
 }
 
 main footer a:hover,
 main footer a:focus {
   -webkit-transform: scale(1.1);
-  color: #8dc6d9;
+  color:#5ba5c2;
 }
 
 /* id files*/
@@ -669,13 +684,13 @@ footer .container h3 {
 }
 
 .page-footer .container a {
-  color: #919fac;
+  color:#8dc6d9;
 }
 
 .page-footer .container a:hover,
 .page-footer .container a:focus {
   opacity: 1;
-  color: #8dc6d9;
+  color:#5ba5c2;
 }
 
 .page-footer .container li {
@@ -773,13 +788,11 @@ footer .container .link-github {
   margin-bottom: auto;
   background: linear-gradient(45deg, #8dc6d9, #004e92);
   background-size: 100%;
-  /* background-position: center; */
   border-radius: 0.6rem;
   text-decoration: none;
   font-weight: bold;
   font-size:clamp(1rem,5vw,1.4rem);
   text-transform: uppercase;
-  /* padding: 1rem 1rem; */
   -webkit-box-shadow: rgba(0, 0.5, 0.5, 0.5) 0px 5px 15px;
   box-shadow: rgba(0, 0, 0, 0.5) 0px 5px 15px;
 }
@@ -791,10 +804,19 @@ footer .container .link-github {
   color: hsl(195, 50%, 70%);
 }
 
+/*--------------button styles none------------------*/
+
+.link-github,section .link-guidelines,#files .container a,
+.page-footer .container ul a {
+  -webkit-text-fill-color: unset;
+}
+
+.link-github::before,section .link-guidelines::before,#files .container a::before,.page-footer .container ul a::before{
+  content: none;
+}
 /* --------------------- Media query -----------------------*/
 @media (max-width: 755px) {
   header h1 {
-      /* animation: in-start-res 2s linear infinite ; */
       animation: none;
       font-size: 1.4rem ;
     }
@@ -814,7 +836,6 @@ footer .container .link-github {
     justify-content: flex-start;
     align-items: flex-start;
     margin: 0 auto;
-    /* width: 75vw; */
   }
 }
 
@@ -878,20 +899,6 @@ footer .container .link-github {
     letter-spacing: 1rem;
   }
 }
-
-@keyframes changeBorder {
-  from{
-    border-color:#5ba5c2;
-    border-style: dashed;
-    border-radius: 1rem;
-  }
-  to{
-    border-color: #919fac;
-    border-style: dotted;
-    border-radius: 1rem;
-  }
-}
-
 
 /*-----------Scroll bar animtion------------------*/
 
